change in submit button

--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
           <p>I hereby declare that the above information provided is true and correct.</p>
         </div>
         <div class="inputfield" id="btn">
-          <button type="submit" value="Register" class="btn">Submit</button>
+          <button type="submit" value="Register" class="btn">Register</button>
           <button type="reset" value="Reset" class="btn">Reset</button>
 
         </div>
