--- a/index.html
+++ b/index.html
@@ -13,16 +13,16 @@
   <div class="wrapper">
     <div class="title">STUDENT REGISTRATION FORM
     </div>
-    <form action="">
+    <form action="POST" data-netlify="true">
       <div class="form">
         <div class="inputfield">
           <label>First Name</label>
-          <input type="text" class="input" placeholder="Enter first name" maxlength="30" pattern="[A-Za-z]{1,32}"
+          <input type="text" class="input" name="fname" placeholder="Enter first name" maxlength="30" pattern="[A-Za-z]{1,32}"
             required>
         </div>
         <div class="inputfield">
           <label>Last Name</label>
-          <input type="text" class="input" placeholder="Enter last name" maxlength="30" pattern="[A-Za-z]{1,32}"
+          <input type="text" class="input" name="lname" placeholder="Enter last name" maxlength="30" pattern="[A-Za-z]{1,32}"
             required>
         </div>
         <div class="inputfield">
@@ -32,50 +32,50 @@
         </div>
         <div class="inputfield">
           <label for="">Age</label>
-          <input type="text" class="input" placeholder="Enter your age" maxlength="2" pattern="^[0-9]{2}$" required
+          <input type="text" class="input" name="age" placeholder="Enter your age" maxlength="2" pattern="^[0-9]{2}$" required
             min="18" max="65" placeholder="Enter your age">
         </div>
         <div class="inputfield">
           <label for="">Date of Birth</label>
-          <input type="date" class="input" required>
+          <input type="date" class="input" name="dob" required>
         </div>
 
 
 
         <div class="inputfield">
           <label>Email Address</label>
-          <input type="email" class="input" placeholder="Enter your email"
+          <input type="email" class="input" name="email" placeholder="Enter your email"
             pattern="[a-z0-9._%+-]+@[a-z0-9.-]+\.[a-z]{2,63}$" required>
         </div>
         <div class="inputfield">
           <label>Password</label>
-          <input type="password" class="input" placeholder="Enter your password min 8 characters" maxlength="100"
+          <input type="password" class="input" name="password" placeholder="Enter your password min 8 characters" maxlength="100"
             minlength="8" required pattern="^(?=.*[A-Za-z])(?=.*\d)[A-Za-z\d]{8,}$">
         </div>
         <div class="inputfield">
           <label>Confirm Password</label>
-          <input type="password" class="input" placeholder="Enter your password min 8 characters" maxlength="100"
+          <input type="password" class="input" name="password" placeholder="Enter your password min 8 characters" maxlength="100"
             minlength="8" required pattern="^(?=.*[A-Za-z])(?=.*\d)[A-Za-z\d]{8,}$">
         </div>
         <div class="inputfield">
           <label for="">Phone Number</label>
           <div class="custom-select" id="phone-codes">
-            <select name="" id="phone-code">
+            <select id="phone-code">
               <option value="+91">+91</option>
             </select>
           </div>
-          <input type="tel" class="input" maxlength="10" id="phone-number" placeholder="Enter your phone number"
+          <input type="tel" class="input" name="phone-number" maxlength="10" id="phone-number" placeholder="Enter your phone number"
             pattern="[7-9]{1}[0-9]{9}" title="Please enter valid phone number">
         </div>
         <div class="inputfield">
           <label>Address</label>
-          <textarea class="textarea" name="" id="" cols="30" rows="5" placeholder="Enter your address"
+          <textarea class="textarea" name="address" id="" cols="30" rows="5" placeholder="Enter your address"
             pattern="^[a-zA-Z][a-zA-Z0-9-_.]{5,12}$" maxlength="100" required></textarea>
         </div>
         <div class="inputfield">
           <label>State</label>
           <div class="custom_select">
-            <select id="country-state" name="country-state" required>
+            <select id="state" name="state" required>
               <option value="">--Select your state--</option>
               <option value="AN">Andaman and Nicobar Islands</option>
               <option value="AP">Andhra Pradesh</option>
@@ -119,27 +119,31 @@
         </div>
         <div class="inputfield">
           <label>Pin Code</label>
-          <input type="text" class="input" placeholder="Enter your postal code" maxlength="6" pattern="^[0-9]{6}$"
+          <input type="text" class="input" name="pincode" placeholder="Enter your postal code" maxlength="6" pattern="^[0-9]{6}$"
             required>
         </div>
 
         <div class="inputfield">
           <label for="">Hobbies</label>
           <div class="hobbies">
-            <input type="checkbox" name="" id="">
+            <input type="checkbox" name="hobbies" id="">
             <label for="">Music</label>
-            <input type="checkbox" name="" id="">
+            <input type="checkbox" name="hobbies" id="">
             <label for="">Movies</label>
-            <input type="checkbox" name="" id="">
+            <input type="checkbox" name="hobbies" id="">
             <label for="">Sports</label>
-            <input type="checkbox" name="" id="">
+            <input type="checkbox" name="hobbies" id="">
             <label for="">Travel</label>
           </div>
         </div>
+      <div class="inputfield">
+        <label>Upload Photo</label>
+        <input type="file" name="myfile" id="myfile" placeholder="Upload your photo" rows="7">
+      </div>
 
         <div class="inputfield terms">
           <label class="check">
-            <input type="checkbox" required>
+            <input type="checkbox" name="check" required>
             <span class="checkmark"></span>
           </label>
           <p>I hereby declare that the above information provided is true and correct.</p>
