--- a/index.html
+++ b/index.html
@@ -17,13 +17,13 @@
       <div class="form">
         <div class="inputfield">
           <label>First Name</label>
-          <input type="text" class="input" name="fname" placeholder="Enter first name" maxlength="30" pattern="[A-Za-z]{1,32}"
-            required>
+          <input type="text" class="input" name="fname" placeholder="Enter first name" maxlength="30"
+            pattern="[A-Za-z]{1,32}" required>
         </div>
         <div class="inputfield">
           <label>Last Name</label>
-          <input type="text" class="input" name="lname" placeholder="Enter last name" maxlength="30" pattern="[A-Za-z]{1,32}"
-            required>
+          <input type="text" class="input" name="lname" placeholder="Enter last name" maxlength="30"
+            pattern="[A-Za-z]{1,32}" required>
         </div>
         <div class="inputfield">
           <label for="">Gender</label>
@@ -32,8 +32,8 @@
         </div>
         <div class="inputfield">
           <label for="">Age</label>
-          <input type="text" class="input" name="age" placeholder="Enter your age" maxlength="2" pattern="^[0-9]{2}$" required
-            min="18" max="65" placeholder="Enter your age">
+          <input type="text" class="input" name="age" placeholder="Enter your age" maxlength="2" pattern="^[0-9]{2}$"
+            required min="18" max="65" placeholder="Enter your age">
         </div>
         <div class="inputfield">
           <label for="">Date of Birth</label>
@@ -49,13 +49,13 @@
         </div>
         <div class="inputfield">
           <label>Password</label>
-          <input type="password" class="input" name="password" placeholder="Enter your password min 8 characters" maxlength="100"
-            minlength="8" required pattern="^(?=.*[A-Za-z])(?=.*\d)[A-Za-z\d]{8,}$">
+          <input type="password" class="input" name="password" placeholder="Enter your password min 8 characters"
+            maxlength="100" minlength="8" required pattern="^(?=.*[A-Za-z])(?=.*\d)[A-Za-z\d]{8,}$">
         </div>
         <div class="inputfield">
           <label>Confirm Password</label>
-          <input type="password" class="input" name="password" placeholder="Enter your password min 8 characters" maxlength="100"
-            minlength="8" required pattern="^(?=.*[A-Za-z])(?=.*\d)[A-Za-z\d]{8,}$">
+          <input type="password" class="input" name="password" placeholder="Enter your password min 8 characters"
+            maxlength="100" minlength="8" required pattern="^(?=.*[A-Za-z])(?=.*\d)[A-Za-z\d]{8,}$">
         </div>
         <div class="inputfield">
           <label for="">Phone Number</label>
@@ -64,8 +64,8 @@
               <option value="+91">+91</option>
             </select>
           </div>
-          <input type="tel" class="input" name="phone-number" maxlength="10" id="phone-number" placeholder="Enter your phone number"
-            pattern="[7-9]{1}[0-9]{9}" title="Please enter valid phone number">
+          <input type="tel" class="input" name="phone-number" maxlength="10" id="phone-number"
+            placeholder="Enter your phone number" pattern="[7-9]{1}[0-9]{9}" title="Please enter valid phone number">
         </div>
         <div class="inputfield">
           <label>Address</label>
@@ -119,8 +119,8 @@
         </div>
         <div class="inputfield">
           <label>Pin Code</label>
-          <input type="text" class="input" name="pincode" placeholder="Enter your postal code" maxlength="6" pattern="^[0-9]{6}$"
-            required>
+          <input type="text" class="input" name="pincode" placeholder="Enter your postal code" maxlength="6"
+            pattern="^[0-9]{6}$" required>
         </div>
 
         <div class="inputfield">
@@ -136,10 +136,10 @@
             <label for="">Travel</label>
           </div>
         </div>
-      <div class="inputfield">
-        <label>Upload Photo</label>
-        <input type="file" name="myfile" id="myfile" placeholder="Upload your photo" rows="7">
-      </div>
+        <div class="inputfield">
+          <label>Upload Photo</label>
+          <input type="file" name="myfile" id="myfile" placeholder="Upload your photo" rows="7"/>
+        </div>
 
         <div class="inputfield terms">
           <label class="check">
@@ -147,6 +147,9 @@
             <span class="checkmark"></span>
           </label>
           <p>I hereby declare that the above information provided is true and correct.</p>
+        </div>
+        <div class="inputfield">
+          <div data-netlify-recaptcha="true"></div>
         </div>
         <div class="inputfield" id="btn">
           <button type="submit" value="Register" class="btn">Register</button>
