update in gender field

--- a/index.html
+++ b/index.html
@@ -31,8 +31,8 @@
         </div>
         <div class="inputfield">
           <label for="">Gender</label>
-          <input type="radio" name="gender male" id="radio" required>Male
-          <input type="radio" name="gender female" id="radio" required>Female
+          <input type="radio" name="gender male" id="radio" value="Male">Male
+          <input type="radio" name="gender female" id="radio" value="Female">Female
         </div>
         <div class="inputfield">
           <label for="">Age</label>
@@ -139,13 +139,13 @@
         <div class="inputfield">
           <label for="">Hobbies</label>
           <div class="hobbies">
-            <input type="checkbox" name="hobbies" id="">
+            <input type="checkbox" name="Music" id="">
             <label for="">Music</label>
-            <input type="checkbox" name="hobbies" id="">
+            <input type="checkbox" name="Movies" id="">
             <label for="">Movies</label>
-            <input type="checkbox" name="hobbies" id="">
+            <input type="checkbox" name="Sports" id="">
             <label for="">Sports</label>
-            <input type="checkbox" name="hobbies" id="">
+            <input type="checkbox" name="Travel" id="">
             <label for="">Travel</label>
           </div>
         </div>
