update in gender field

--- a/index.html
+++ b/index.html
@@ -31,8 +31,8 @@
         </div>
         <div class="inputfield">
           <label for="">Gender</label>
-          <input type="radio" name="gender male" id="radio" value="Male">Male
-          <input type="radio" name="gender female" id="radio" value="Female">Female
+          <input type="radio" name="gender" id="radio" value="Male">Male
+          <input type="radio" name="gender" id="radio" value="Female">Female
         </div>
         <div class="inputfield">
           <label for="">Age</label>
