--- a/index.html
+++ b/index.html
@@ -139,13 +139,13 @@
         <div class="inputfield">
           <label for="">Hobbies</label>
           <div class="hobbies">
-            <input type="checkbox" name="Music" id="">
+            <input type="checkbox" name="Hobbies" id="" value="Music">
             <label for="">Music</label>
-            <input type="checkbox" name="Movies" id="">
+            <input type="checkbox" name="Hobbies" id="" value="Movies">
             <label for="">Movies</label>
-            <input type="checkbox" name="Sports" id="">
+            <input type="checkbox" name="Hobbies" id="" value="Sports">
             <label for="">Sports</label>
-            <input type="checkbox" name="Travel" id="">
+            <input type="checkbox" name="Hobbies" id="" value="Travel">
             <label for="">Travel</label>
           </div>
         </div>
