--- a/index.html
+++ b/index.html
@@ -161,8 +161,8 @@
           </label>
           <p>I hereby declare that the above information provided is true and correct.</p>
         </div>
-        <div class="inputfield">
-          <div data-netlify-recaptcha="true" required></div>
+        <div class="inputfield" required>
+          <div data-netlify-recaptcha="true"></div>
         </div>
         <div class="inputfield" id="btn">
           <button type="submit" value="Register" class="btn" onclick="checkPassword()">Register</button>
