--- a/index.html
+++ b/index.html
@@ -22,12 +22,12 @@
         <div class="inputfield">
           <label>First Name</label>
           <input type="text" class="input" id="name" name="fname" placeholder="Enter first name" maxlength="30"
-            pattern="[A-Za-z]{1,32}" required>
+          pattern="[A-Z][a-z]* [A-Z][a-z]*" required>
         </div>
         <div class="inputfield">
           <label>Last Name</label>
           <input type="text" class="input" id="name" name="lname" placeholder="Enter last name" maxlength="30"
-            pattern="[A-Za-z]{1,32}" required>
+          pattern="[A-Z][a-z]* [A-Z][a-z]*" required>
         </div>
         <div class="inputfield">
           <label for="">Gender</label>
@@ -156,7 +156,7 @@
 
         <div class="inputfield terms">
           <label class="check">
-            <input type="checkbox" name="check" value="Declare" required>
+            <input type="checkbox" name="check" value="Declared" required>
             <span class="checkmark"></span>
           </label>
           <p>I hereby declare that the above information provided is true and correct.</p>
