modified index file

--- a/index.html
+++ b/index.html
@@ -22,12 +22,12 @@
         <div class="inputfield">
           <label>First Name</label>
           <input type="text" class="input" id="name" name="fname" placeholder="Enter first name" maxlength="30"
-          pattern="[A-Z][a-z]* [A-Z][a-z]*" required>
+            pattern="[A-Za-z]{1,32}" required>
         </div>
         <div class="inputfield">
           <label>Last Name</label>
           <input type="text" class="input" id="name" name="lname" placeholder="Enter last name" maxlength="30"
-          pattern="[A-Z][a-z]* [A-Z][a-z]*" required>
+            pattern="[A-Za-z]{1,32}" required>
         </div>
         <div class="inputfield">
           <label for="">Gender</label>
