modified index file

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
         <div class="inputfield">
           <label for="">Age</label>
           <input type="text" class="input" name="age" placeholder="Enter your age" maxlength="2" pattern="^[0-9]{2}$"
-            required min="18" max="65" placeholder="Enter your age">
+            required placeholder="Enter your age">
         </div>
         <div class="inputfield">
           <label for="">Date of Birth</label>
