modified index file

--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
         </div>
         <div class="inputfield">
           <label>Password</label>
-          <input type="password" class="input" id="password" name="password"
+          <input type="password" class="input" id="password" name=""
             placeholder="Enter your password min 8 characters" autocomplete="off" onkeyup='check()'
             pattern="(?=.*\d)(?=.*[a-z])(?=.*[A-Z]).{8,}"
             title="Must contain at least one number and one uppercase and lowercase letter, and at least 8 or more characters"
@@ -62,7 +62,7 @@
         </div>
         <div class="inputfield">
           <label>Confirm Password</label>
-          <input type="password" onkeyup='check()' class="input" id="confirm-password" name="confirm-password"
+          <input type="password" onkeyup='check()' class="input" id="confirm-password" name=""
             placeholder="Confirm password" autocomplete="off" pattern="(?=.*\d)(?=.*[a-z])(?=.*[A-Z]).{8,}"
             title="Must contain at least one number and one uppercase and lowercase letter, and at least 8 or more characters"
             maxlength="100" minlength="8" required>
