--- a/index.html
+++ b/index.html
@@ -163,7 +163,7 @@
         <div class="inputfield" required>
           <div data-netlify-recaptcha="true"></div>
         </div>
-        <div class="inputfield" id="btn">
+        <div class="inputfield btns" id="btn">
           <button type="submit" value="Register" class="btn" onclick="checkPassword()">Register</button>
           <button type="reset" value="Reset" class="btn">Reset</button>
 
