change in index.html

--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
 
         <div class="inputfield">
           <label>Pin Code</label>
-          <input type="text" class="input" name="pincode" placeholder="Enter your postal code" maxlength="6"
+          <input type="text" class="input" name="pincode" placeholder="Enter your pin code" maxlength="6"
             pattern="^[0-9]{6}$" required>
         </div>
 
