--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
             pattern="[A-Za-z]{1,32}" required>
         </div>
 
-        <div class="inputfield">
+        <div class="inputfield" id="gender">
           <label for="">Gender</label>
           <input type="radio" name="gender" id="radio" value="Male">Male
           <input type="radio" name="gender" id="radio" value="Female">Female
@@ -141,9 +141,9 @@
             pattern="^[0-9]{6}$" required>
         </div>
 
-        <div class="inputfield">
+        <div class="inputfield" id="hobbies" >
           <label for="">Hobbies</label>
-          <div class="hobbies">
+          <div class="hobbies" >
             <input type="checkbox" name="Hobbies" id="" value="Music">
             <label for="">Music</label>
             <input type="checkbox" name="Hobbies" id="" value="Movies">
