--- a/index.html
+++ b/index.html
@@ -9,12 +9,12 @@
   <link rel="stylesheet" href="style.css">
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.0/css/all.css"
     integrity="sha384-1ZN37f5QGtY3VHgisS14W3ExzMWZxybE1SJSEsQp9s+oqd12jhcu+A56Ebc1zFSJ" crossorigin="anonymous">
-
+    <script src="./script.js" type="text/javascript"></script>
 </head>
 
 <body>
   <div class="wrapper">
-    <div class="title">STUDENT REGISTRATION FORM
+    <div class="title">Student Registration Form
     </div>
     <form action="POST" data-netlify="true">
       <div class="form">
@@ -22,13 +22,13 @@
         <div class="inputfield">
           <label>First Name</label>
           <input type="text" class="input" id="name" name="fname" placeholder="Enter first name" maxlength="30"
-            pattern="[A-Za-z]{1,32}" required>
+            pattern="[A-Za-z]{1,32}" title="Enter only alphabets" required>
         </div>
 
         <div class="inputfield">
           <label>Last Name</label>
           <input type="text" class="input" id="name" name="lname" placeholder="Enter last name" maxlength="30"
-            pattern="[A-Za-z]{1,32}" required>
+            pattern="[A-Za-z]{1,32}" title="Enter only alphabets" required>
         </div>
 
         <div class="inputfield" id="gender">
@@ -40,7 +40,7 @@
         <div class="inputfield">
           <label for="">Age</label>
           <input type="text" class="input" name="age" placeholder="Enter your age" maxlength="2" pattern="^[0-9]{2}$"
-            required placeholder="Enter your age">
+            required placeholder="Enter your age" title="Enter numbers only">
         </div>
 
         <div class="inputfield">
@@ -183,36 +183,5 @@
   </div>
 
 </body>
-<script type="text/javascript">
-  function checkPassword() {
-    let password = document.getElementById("password").value;
-    let confirmpassword = document.getElementById("confirm-password").value;
-    console.log(password, confirm - password);
-    let message = document.getElementById("message");
-    if (password.length != 0) {
-      if (password == confirmpassword) {
-        message.textContent = "Password match";
-        message.style.color = "#00FF00"
-      } else {
-        message.textContent = "Password does not match";
-        message.style.color = "#FF0000";
-      }
-    }
-    else {
-      alert("All details are compulsory. Please fill all details.");
-      message.textContent = "";
-    }
-  }
-
-  var uploadField = document.getElementById("myfile");
-
-uploadField.onchange = function() {
-    if(this.files[0].size > 102400){
-       alert("File is too big! File size should be 100kb.");
-       this.value = "";
-    };
-};
-
-</script>
 
 </html>
